# soumap

./: .gitignore  404.html  LICENSE  README.md  blobs_soumap.h5  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt
api/: index.html
docs/: api.md  index.md  soumap_mpec_tutorial.ipynb
search/: search_index.json
soumap_mpec_tutorial/: index.html
src/soumap/: __init__.py  io.py  layout.py  mpec.py  similarity.py  soumap.py  utils.py
tests/: test_digits.py  test_mpec_blobs.py  test_mpec_digits.py
