[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soumap"
version = "0.1.0"
description = "Self-Organizing UMAP: hybrid SOM / UMAP learning of data prototypes and their embedding"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "jt-ut" }
]
keywords = ["self-organizing map", "umap", "dimensionality reduction", "vector quantization", "unsupervised learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "umap-learn>=0.5",
  "h5py>=3.8",
  "igraph>=0.10.8",
  "plotnine>=0.13.6",
  "vqlp @ git+https://github.com/jt-ut/vqlp.git",
  "gtsom @ git+https://github.com/jt-ut/gtsom.git",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.urls]
Repository = "https://github.com/jt-ut/soumap"

[tool.hatch.build.targets.wheel]
packages = ["src/soumap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=soumap --cov-report=term-missing"